docs/api/qiskit-ibm-runtime/0.47/runtime-decoder.mdx
---
title: RuntimeDecoder (v0.47)
description: API reference for qiskit_ibm_runtime.RuntimeDecoder in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.RuntimeDecoder
---

# RuntimeDecoder

<Class id="qiskit_ibm_runtime.RuntimeDecoder" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/utils/json.py#L429-L623" signature="RuntimeDecoder(*args, **kwargs)" modifiers="class">
  Bases: `JSONDecoder`

  JSON Decoder used by runtime service.

  `object_hook`, if specified, will be called with the result of every JSON object decoded and its return value will be used in place of the given `dict`. This can be used to provide custom deserializations (e.g. to support JSON-RPC class hinting).

  `object_pairs_hook`, if specified will be called with the result of every JSON object decoded with an ordered list of pairs. The return value of `object_pairs_hook` will be used instead of the `dict`. This feature can be used to implement custom decoders. If `object_hook` is also defined, the `object_pairs_hook` takes priority.

  `parse_float`, if specified, will be called with the string of every JSON float to be decoded. By default this is equivalent to float(num\_str). This can be used to use another datatype or parser for JSON floats (e.g. decimal.Decimal).

  `parse_int`, if specified, will be called with the string of every JSON int to be decoded. By default this is equivalent to int(num\_str). This can be used to use another datatype or parser for JSON integers (e.g. float).

  `parse_constant`, if specified, will be called with one of the following strings: -Infinity, Infinity, NaN. This can be used to raise an exception if invalid JSON numbers are encountered.

  If `strict` is false (true is the default), then control characters will be allowed inside strings. Control characters in this context are those with character codes in the 0-31 range, including `'\t'` (tab), `'\n'`, `'\r'` and `'\0'`.

  ## Methods

  **Parameters**

  *   **args** (*Any*)
  *   **kwargs** (*Any*)

  ### decode

  <Function id="qiskit_ibm_runtime.RuntimeDecoder.decode" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/utils/json.py#L437-L483" signature="decode(s)">
    Return the Python representation of a string `s` containing a JSON document.

    Applies additional conversion for executor program and NLV3’s `params`, preserving the superclass `decode()` output in all other cases.

    **Parameters**

    **s** (*str*) – a string containing a JSON document.

    **Return type**

    *Any*
  </Function>

  ### object\_hook

  <Function id="qiskit_ibm_runtime.RuntimeDecoder.object_hook" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/utils/json.py#L485-L623" signature="object_hook(obj)">
    Called to decode object.

    **Parameters**

    **obj** (*Any*)

    **Return type**

    *Any*
  </Function>

  ### raw\_decode

  <Function id="qiskit_ibm_runtime.RuntimeDecoder.raw_decode" signature="raw_decode(s, idx=0)">
    Decode a JSON document from `s` (a `str` beginning with a JSON document) and return a 2-tuple of the Python representation and the index in `s` where the document ended.

    This can be used to decode a JSON document from a string that may have extraneous data at the end.
  </Function>
</Class>

